# KataProxy

./: .env.example  .gitignore  ARCHITECTURE.md  FRAMEWORK.md  NOTICE  README.md  baduk.py  bsa.py  contextual.py  flt.py  katago_effectful.py  keep_alive.py  logging_config.py  proxy_json.py  proxy_server.py  pubsub_hub.py  pyproject.toml  reginterp.py  router.py  run_leaf.sh  run_relay.sh  session_middleware.py  sproxy_config.py  transposition_enricher.py
.github/workflows/: build_wheels.yml
AbstractProxy/: __init__.py  katago_proxy.py  katago_transformers.py  protocol_transformer.py  proxy_core.py
goboard_transposition/: COMPILATION.md  gobackend.cpp  goboard.h  make.sh  meson.build  meson.options  pyproject.toml  test_partition_pv.py
rxp/: __init__.py  rxp.py
tests/: diagnose_phase1.py  diagnose_phase2.py  diagnose_phase3.py  synthetic_backend.py
