[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kataproxy"
version = "1.0.0"
description = "A modular, composable protocol proxy and analysis middleware for KataGo."
readme = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.10"
keywords = ["katago", "go", "baduk", "proxy", "websocket", "analysis"]
dependencies = [
    "asteval>=0.9.31",
    "numpy>=1.24",
    "scipy>=1.11",
    "websockets>=12.0",
    "sgfmill>=1.1",
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
# Development tooling.
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
kataproxy = "proxy_server:main"

[project.urls]
Repository = "https://github.com/KodBena/kataproxy"

[tool.hatch.build.targets.wheel]
# Root-level application modules + sub-packages.
# Phase 5 will reorganize these into a proper kataproxy/ package.
packages = ["AbstractProxy", "rxp"]
sources = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true   # go_transposition, colored_logger are optional natives

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = []
